<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Memo+</string>
    <string name="app_title">My Memos</string>
    <string name="profile_back">Back</string>
    <string name="new_memo_title">New Memo</string>
    <string name="new_memo_abstract">This is your new memo…</string>
    <string name="new_memo_time">Last edit: 大明崇禎十七年五月一日</string>
    <string name="bottom_sum">Total: 5 memos</string>
    <string name="description_home">Home</string>
    <string name="description_icon">User\'s icon</string>
    <string name="signature">“ 苟利国家生死以，岂因祸福避趋之 ”</string>
    <string name="tag_user_id">User ID</string>
    <string name="tag_name">Name</string>
    <string name="name">Furina</string>
    <string name="edit_cancel">Cancel</string>
    <string name="select_icon">Select</string>
    <string name="user_id">furina_defontaine@gmail.com</string>
    <string name="user_id_view">ID: furina_defontaine@gmail.com</string>
    <string name="edit_name_hint">*no more than 24 letters</string>
    <string name="tag_password">Password</string>
    <string name="edit_password_hint">*no more than 30 letters</string>
    <string name="default_password">default@passwordwith27words</string>
    <string name="check_password_hint">*New password</string>
    <string name="tag_signature">Signature</string>
    <string name="edit_signature">苟利国家生死以，岂因祸福避趋之</string>
    <string name="hint_edit_signature">*no more than 20 characters</string>
    <string name="hint_search">Search</string>
    <string name="default_type">Default Type</string>
    <string name="set_id_hint">*your email address</string>
    <string name="sign_in">Sign In</string>
    <string name="login_title">Login / Sign up</string>
    <string name="login">Login</string>
    <string name="sign_up_title">Sign up to Memo+</string>
    <string name="enter_again">Enter Again</string>
    <string name="add_tag">Add a new tag...</string>
</resources>