<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".EditProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/antique_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/description_home"
            app:backgroundTint="@color/antique_white"/>

        <TextView
            android:id="@+id/cancel_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit_cancel"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center_vertical"
            android:layout_marginStart="56dp"
            android:textSize="28sp"
            android:textColor="@color/grey"/>

    </RelativeLayout>

    <com.example.memo.CircularImageView
        android:id="@+id/select_icon"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/description_icon"
        android:src="@drawable/pic_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/setavatar_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_marginEnd="18dp"
        android:src="@drawable/ic_finish"
        android:contextClickable="true"
        app:backgroundTint="@color/floral_white"
        app:layout_constraintTop_toTopOf="@id/select_icon"
        app:layout_constraintBottom_toBottomOf="@id/select_icon"
        app:layout_constraintEnd_toEndOf="@id/select_icon"/>

    <ImageButton
        android:id="@+id/select_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_edit"
        android:contextClickable="true"
        android:onClick="selectIcon"
        app:backgroundTint="@color/floral_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_icon"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_name"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/name"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/name"
            android:textSize="15sp"
            android:hint="@string/edit_name_hint"
            android:autofillHints="Furina"
            android:inputType="text"/>

        <ImageButton
            android:id="@+id/setname_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/ic_finish"
            android:contextClickable="true"
            app:backgroundTint="@color/floral_white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_user_id"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_user_id"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/user_id"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/user_id"
            android:textSize="15sp"
            android:textColor="@color/grey"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_password"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_password"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal|bottom"
            android:inputType="textPassword"
            android:text="@string/default_password"
            android:textSize="14sp"
            android:hint="@string/edit_password_hint"/>

        <ImageButton
            android:id="@+id/setpwd_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/ic_finish"
            android:contextClickable="true"
            app:backgroundTint="@color/floral_white"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_check_password"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal|bottom"
            android:inputType="textPassword"
            android:text="@string/default_password"
            android:textSize="14sp"
            android:hint="@string/check_password_hint"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_signature"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_signature"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/signature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal|bottom"
            android:text="@string/edit_signature"
            android:textSize="14sp"
            android:hint="@string/hint_edit_signature"/>

        <ImageButton
            android:id="@+id/setsign_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/ic_finish"
            android:contextClickable="true"
            app:backgroundTint="@color/floral_white"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/edit_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/antique_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>