<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".Registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/antique_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/description_home"
            app:backgroundTint="@color/antique_white"/>

        <TextView
            android:id="@+id/back_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile_back"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center_vertical"
            android:layout_marginStart="56dp"
            android:textSize="28sp"
            android:textColor="@color/grey"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/floral_white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/sign_up_title"
        android:textStyle="italic|bold"
        android:textColor="@color/grey"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.example.memo.CircularImageView
        android:id="@+id/select_icon"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/description_icon"
        android:src="@drawable/pic_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_title" />

    <ImageButton
        android:id="@+id/select_icon_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_upload"
        android:contextClickable="true"
        android:onClick="selectIcon"
        app:backgroundTint="@color/floral_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_icon"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_name"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_name"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/name"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal|bottom"

            android:textSize="15sp"
            android:hint="@string/edit_name_hint"
            android:autofillHints="Furina"
            android:inputType="text"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_user_id"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_user_id"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/user_id"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:hint="@string/set_id_hint"
            android:textSize="15sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_password"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_password"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/password"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal|bottom"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/edit_password_hint"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="130dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_check_password"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/check_password"
            android:layout_width="232dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal|bottom"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:hint="@string/check_password_hint"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toBottomOf="@+id/select_icon_button"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tag_signature"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:paddingStart="4dp"
            android:text="@string/tag_signature"
            android:textStyle="bold"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edit_signature"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal|bottom"
            android:textSize="14sp"
            android:hint="@string/hint_edit_signature"/>

    </RelativeLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="14sp"
        android:layout_marginTop="600dp"
        android:backgroundTint="@color/wood"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/register_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/antique_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>