<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".PersonalProfile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:background="@color/antique_white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/description_home"
            app:backgroundTint="@color/antique_white"/>

        <TextView
            android:id="@+id/back_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/profile_back"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:gravity="center_vertical"
            android:layout_marginStart="56dp"
            android:textSize="28sp"
            android:textColor="@color/grey"/>

        <ImageButton
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_edit"
            android:contextClickable="true"
            app:backgroundTint="@color/antique_white"/>

    </RelativeLayout>

    <com.example.memo.CircularImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/description_icon"
        android:src="@drawable/pic_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/floral_white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/icon"/>

    <TextView
        android:id="@+id/user_id_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/floral_white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/user_id_view"
        android:textSize="14sp"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/name_title"/>

    <TextView
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/floral_white"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/signature"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintTop_toBottomOf="@+id/user_id_view"/>

    <TextView
        android:id="@+id/profile_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/antique_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>